# docker-workshop

./: README.md  Taxy_data_to_postgres.ipynb  Taxy_data_to_postgres.py  Untitled.ipynb  ingest_data.py  pyproject.toml
homework/: Docker_homework.ipynb  Docker_homework.py  README.md  Untitled.ipynb
pipeline/: comando_docker.txt  docker-compose.yaml  pipeline.py  test1.py
test/: file2.txt
