[project]
name = "docker-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.4",
    "pandas==3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "pyarrow==23.0.1",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
